# AIglobalMedia_test

./: .gitignore  Python 2nd Interview Test Data.xlsx  README.MD  main.py  pyproject.toml
src/: edit_image.py  preprocess.py
