[tool.poetry]
name = "aiglobal-test"
version = "0.1.0"
description = ""
authors = ["reid efe <reidefe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
